ãrefector: redis 저장 ìdto와 응답 dto 분리